Switch to typescript
Result of using https://github.com/manuth/TSGeneratorGenerator

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Build results
+[Ll]ib/
 
 # Created by https://www.gitignore.io/api/node,latex
 # Edit at https://www.gitignore.io/?templates=node,latex
