--- a/package.json
+++ b/package.json
@@ -2,13 +2,41 @@
   "name": "generator-latex-template",
   "version": "0.1.0-dev",
   "description": "Generates latextemplates (e.g., for thesis, workshops, conferences, IEEEtran, LNCS, ...)",
-  "files": [
-    "generators"
-  ],
+  "author": {
+    "name": "Oliver Kopp",
+    "email": "kopp.dev@gmail.com"
+  },
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "latex",
+    "LNCS"
   ],
+  "scripts": {
+    "build": "tsc -p .",
+    "rebuild": "npm run clean && npm run build",
+    "watch": "tsc -p . --watch",
+    "clean": "rimraf ./lib",
+    "lint": "tslint -p ./ -t verbose",
+    "test": "mocha",
+    "prepare": "npm run rebuild"
+  },
   "dependencies": {
-    "yeoman-generator": "^1.1.1"
+    "chalk": "^2.4.2",
+    "dedent": "^0.7.0",
+    "extended-yo-generator": "^1.0.8",
+    "yosay": "^2.0.2"
+  },
+  "devDependencies": {
+    "@manuth/tsconfig": "^1.2.1",
+    "@manuth/tslint-presets": "^1.0.2",
+    "@types/dedent": "^0.7.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.8",
+    "@types/yosay": "0.0.29",
+    "mocha": "^6.1.4",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.5.2",
+    "typescript-tslint-plugin": "^0.5.0",
+    "yo": "^2.0.6"
   }
 }
