Refine .gitignore and remove package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Build results
 [Ll]ib/
 
+package-lock.json
+
+.idea/
+*.iml
+
 # Created by https://www.gitignore.io/api/node,latex
 # Edit at https://www.gitignore.io/?templates=node,latex
 
