--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/yosay": "0.0.29",
     "mocha": "^6.1.4",
     "rimraf": "^2.6.3",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.2",
     "typescript-tslint-plugin": "^0.5.0",
     "yo": "^2.0.6"
