--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "typescript.format.placeOpenBraceOnNewLineForFunctions": true,
     "markdownlint.ignore": [
         "!templates/**"
-    ]
+   ],
+   "typescript.tsdk": "node_modules/typescript/lib"
 }
