--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "generator-latex-template",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Generates latextemplates (e.g., for thesis, workshops, conferences, IEEEtran, LNCS, ...)",
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/latextemplates/generator-latex-template"
+  },
   "author": {
     "name": "Oliver Kopp",
     "email": "kopp.dev@gmail.com"
   },
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "latex"
   ],
   "scripts": {
     "build": "tsc -p .",
@@ -31,16 +36,12 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.2",
     "@types/yosay": "0.0.29",
-    "chalk": "^2.4.2",
-    "dedent": "^0.7.0",
-    "extended-yo-generator": "^1.0.13",
     "markdownlint-cli": "^0.18.0",
     "mocha": "^6.2.0",
     "rimraf": "^3.0.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "typescript-tslint-plugin": "^0.5.4",
-    "yo": "^3.1.0",
-    "yosay": "^2.0.2"
+    "yo": "^3.1.0"
   }
 }
