--- a/package.json
+++ b/package.json
@@ -1,47 +1,77 @@
 {
   "name": "generator-latex-template",
-  "version": "0.1.0",
-  "description": "Generates latextemplates (e.g., for thesis, workshops, conferences, IEEEtran, LNCS, ...)",
-  "license": "MIT",
-  "repository": {
-    "url": "https://github.com/latextemplates/generator-latex-template"
-  },
+  "version": "0.1.0-wip",
+  "description": "Generates a latex template to be used as start for writing scientific works (papers, articles, theses)",
+  "homepage": "https://github.com/latextemplates/generator-latex-template",
   "author": {
     "name": "Oliver Kopp",
-    "email": "kopp.dev@gmail.com"
+    "email": "kopp.dev@gmail.com",
+    "url": "http://orcid.org/0000-0001-6962-4290"
   },
-  "keywords": [
-    "yeoman-generator",
-    "latex"
+  "files": [
+    "generators"
   ],
-  "scripts": {
-    "build": "tsc -p .",
-    "rebuild": "npm run clean && npm run build",
-    "watch": "tsc -p . --watch",
-    "clean": "rimraf ./lib",
-    "lint": "tslint -p ./ -t verbose && markdownlint ./templates/**/*.md ./templates/**/*.md.ejs || exit 0",
-    "test": "mocha",
-    "prepare": "npm run rebuild"
+  "main": "generators/index.js",
+  "keywords": [
+    "latex",
+    "bachelor thesis",
+    "master thesis",
+    "template",
+    "yeoman-generator"
+  ],
+  "devDependencies": {
+    "yeoman-test": "^1.7.0",
+    "yeoman-assert": "^3.1.0",
+    "eslint": "^5.9.0",
+    "prettier": "^1.15.2",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-config-xo": "^0.25.0",
+    "jest": "^23.5.0"
+  },
+  "engines": {
+    "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "dedent": "^0.7.0",
-    "extended-yo-generator": "^1.0.13",
-    "yosay": "^2.0.2"
+    "yeoman-generator": "^2.0.1",
+    "chalk": "^2.1.0",
+    "yosay": "^2.0.1"
   },
-  "devDependencies": {
-    "@manuth/tsconfig": "^1.2.2",
-    "@manuth/tslint-presets": "^1.0.4",
-    "@types/dedent": "^0.7.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.2",
-    "@types/yosay": "0.0.29",
-    "markdownlint-cli": "^0.18.0",
-    "mocha": "^6.2.0",
-    "rimraf": "^3.0.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
-    "typescript-tslint-plugin": "^0.5.4",
-    "yo": "^3.1.0"
-  }
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "xo",
+      "prettier"
+    ],
+    "env": {
+      "jest": true,
+      "node": true
+    },
+    "rules": {
+      "prettier/prettier": "error"
+    },
+    "plugins": [
+      "prettier"
+    ]
+  },
+  "scripts": {
+    "pretest": "eslint .",
+    "test": "jest"
+  },
+  "repository": "https://github.com/latextemplates/generator-latex-template.git",
+  "license": "GPL-3.0"
 }
