--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "files": [
     "generators"
   ],
-  "main": "generators/index.js",
+  "main": "generators/app/index.js",
   "keywords": [
     "latex",
     "bachelor thesis",
