--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
-    "yeoman-assert": "^3.1.0",
-    "eslint": "^5.9.0",
-    "prettier": "^1.15.2",
-    "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-config-xo": "^0.25.0",
-    "jest": "^23.5.0"
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-xo": "^0.29.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "jest": "^25.5.1",
+    "lint-staged": "^10.2.0",
+    "prettier": "^2.0.5",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^2.4.1"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^2.0.1",
-    "chalk": "^2.1.0",
-    "yosay": "^2.0.1"
+    "chalk": "^4.0.0",
+    "yeoman-generator": "^4.9.0",
+    "yosay": "^2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
