Add support for passing options through the command line

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   },
   "dependencies": {
     "chalk": "^4.0.0",
+    "minimist": "^1.2.5",
     "yeoman-generator": "^4.9.0",
+    "yeoman-option-or-prompt": "^2.0.1",
     "yosay": "^2.0.2"
   },
   "jest": {
