--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,35 @@
 name: Tests
 on: [push]
 jobs:
-  build_latex:
+  thesis:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        latexcompiler: [pdflatex, lualatex]
+        bibtextool: [biblatex]
+        language: [en, de]
+        font: [default, arial, times]
+        cleveref: [true]
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
-      - name: Run Jest tests
-        uses: stefanoeb/jest-action@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - run: npm install
+      - name: Generate template
+        run: |
+          mkdir tmp && cd tmp
+          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }}
+          pwd
+          ls -la
+        env:
+          yeoman_test: true
+      - name: latexmk
+        uses: dante-ev/latex-action@master
+        # "arial" and "times" are unavailable on Linux. Thus, we test for "default" only
+        if: ${{ (matrix.latexcompiler != 'lualatex') || (matrix.font == 'default') }}
+        with:
+          root_file: main.tex
+          # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
+          working_directory: '/github/workspace/tmp'
