--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ package-lock.json
 .idea/
 *.iml
 
+# ignore auto-compiled files (by a plugin)
+main.*.pdf
+
 # Created by https://www.gitignore.io/api/node,latex
 # Edit at https://www.gitignore.io/?templates=node,latex
 
