--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }}
+          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --texlive=tl2019 --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }}
           pwd
           ls -la
         env:
