--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        documentclass: [scientific-thesis]
         latexcompiler: [pdflatex, lualatex]
         bibtextool: [biblatex]
         language: [en, de]
         font: [default, arial, times]
-        cleveref: [true]
+        cleveref: [true, false]
+        examples: [true, false]
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -18,9 +20,11 @@ jobs:
           node-version: '10.x'
       - run: npm install
       - name: Generate template
+        ## TODO: Improve this by creating a custom matrix. https://github.community/t5/GitHub-Actions/Improve-matrix-exclusion-feature/m-p/32592/highlight/true#M1193
+        ## if: ${{ matrix.font != 'arial' || matrix.documentclass != 'scientific-thesis' }}
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }}
+          npx yo $GITHUB_WORKSPACE --documentclass=${{ matrix.documentclass }} --texlive=tl2019 --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --examples=${{ matrix.examples }}
           pwd
           ls -la
         env:
