Begin to work on LNCS

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "npm": ">= 4.0.0"
   },
   "dependencies": {
+    "basic-ftp": "^4.6.1",
     "chalk": "^4.0.0",
     "minimist": "^1.2.5",
+    "unzipper": "^0.10.11",
     "yeoman-generator": "^4.9.0",
     "yeoman-option-or-prompt": "^2.0.1",
     "yosay": "^2.0.2"
