--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        documentclass: [scientific-thesis]
+        documentclass: [scientific-thesis, lncs]
         latexcompiler: [pdflatex, lualatex]
         bibtextool: [biblatex]
         language: [en, de]
         font: [default, arial, times]
         cleveref: [true, false]
+        enquotes: [csquotes, textcmds, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -24,7 +25,7 @@ jobs:
         ## if: ${{ matrix.font != 'arial' || matrix.documentclass != 'scientific-thesis' }}
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=${{ matrix.documentclass }} --texlive=tl2019 --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --examples=${{ matrix.examples }}
+          npx yo $GITHUB_WORKSPACE --documentclass=${{ matrix.documentclass }} --texlive=tl2019 --latexcompiler=${{ matrix.latexcompiler }} --bibtextool=${{ matrix.bibtextool }} --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }} --examples=${{ matrix.examples }}.
           pwd
           ls -la
         env:
