--- a/.github/workflows/test-lncs-pdflatex.yml
+++ b/.github/workflows/test-lncs-pdflatex.yml
@@ -20,7 +20,11 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=lncs --texlive=tl2019 --latexcompiler=pdflatex --bibtextool=bibtex --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }} --examples=${{ matrix.examples }}.
+          npx yo $GITHUB_WORKSPACE --documentclass=lncs --texlive=tl2019\
+           --latexcompiler=pdflatex --bibtextool=bibtex\
+           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --examples=${{ matrix.examples }}
           pwd
           ls -la
         env:
