--- a/.github/workflows/test-lncs-pdflatex.yml
+++ b/.github/workflows/test-lncs-pdflatex.yml
@@ -1,4 +1,4 @@
-name: pdflatex LNCS
+name: LNCS pdflatex
 on: [push]
 jobs:
   bibtex:
@@ -21,8 +21,11 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=lncs --texlive=tl2019\
-           --latexcompiler=pdflatex --bibtextool=bibtex\
+          npx yo $GITHUB_WORKSPACE\
+           --documentclass=lncs
+           --latexcompiler=pdflatex\
+           --bibtextool=bibtex\
+           --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
@@ -57,8 +60,11 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=lncs --texlive=tl2019\
-           --latexcompiler=pdflatex --bibtextool=biblatex\
+          npx yo $GITHUB_WORKSPACE\
+           --documentclass=lncs
+           --latexcompiler=pdflatex\
+           --bibtextool=biblatex\
+           --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
