--- a/.github/workflows/test-scientific-thesis-lualatex.yml
+++ b/.github/workflows/test-scientific-thesis-lualatex.yml
@@ -1,4 +1,4 @@
-name: lualatex Scientific Thesis
+name: Scientific Thesis Template lualatex
 on: [push]
 jobs:
   bibtex:
@@ -21,7 +21,15 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --texlive=tl2019 --latexcompiler=lualatex --bibtextool=bibtex --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }} --examples=${{ matrix.examples }}.
+          npx yo $GITHUB_WORKSPACE\
+           --documentclass=scientific-thesis
+           --latexcompiler=lualatex\
+           --bibtextool=bibtex\
+           --texlive=tl2019\
+           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --todo=${{ matrix.todo }}\
+           --examples=${{ matrix.examples }}
           pwd
           ls -la
         env:
@@ -51,7 +59,15 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --texlive=tl2019 --latexcompiler=lualatex --bibtextool=biblatex --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }} --examples=${{ matrix.examples }}.
+          npx yo $GITHUB_WORKSPACE\
+           --documentclass=scientific-thesis
+           --latexcompiler=lualatex\
+           --bibtextool=biblatex\
+           --texlive=tl2019\
+           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --todo=${{ matrix.todo }}\
+           --examples=${{ matrix.examples }}
           pwd
           ls -la
         env:
