--- a/.github/workflows/test-scientific-thesis-pdflatex.yml
+++ b/.github/workflows/test-scientific-thesis-pdflatex.yml
@@ -1,4 +1,4 @@
-name: pdfaltex Scientific Thesis
+name: Scientific Thesis Template pdflatex
 on: [push]
 jobs:
   bibtex:
@@ -20,7 +20,15 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --texlive=tl2019 --latexcompiler=pdflatex --bibtextool=bibtex --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }} --examples=${{ matrix.examples }}.
+          npx yo $GITHUB_WORKSPACE\
+           --documentclass=scientific-thesis
+           --latexcompiler=pdflatex\
+           --bibtextool=bibtex\
+           --texlive=tl2019\
+           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --todo=${{ matrix.todo }}\
+           --examples=${{ matrix.examples }}
           pwd
           ls -la
         env:
@@ -50,7 +58,15 @@ jobs:
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
-          npx yo $GITHUB_WORKSPACE --documentclass=scientific-thesis --texlive=tl2019 --latexcompiler=pdflatex --bibtextool=biblatex --language==${{ matrix.language }} --font=${{ matrix.font }} --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }} --examples=${{ matrix.examples }}.
+          npx yo $GITHUB_WORKSPACE\
+           --documentclass=scientific-thesis
+           --latexcompiler=pdflatex\
+           --bibtextool=biblatex\
+           --texlive=tl2019\
+           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --todo=${{ matrix.todo }}\
+           --examples=${{ matrix.examples }}
           pwd
           ls -la
         env:
