--- a/.github/workflows/test-lncs-lualatex.yml
+++ b/.github/workflows/test-lncs-lualatex.yml
@@ -23,7 +23,7 @@ jobs:
           mkdir tmp && cd tmp
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=lncs
+           --documentclass=lncs\
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
@@ -62,7 +62,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=lncs
+           --documentclass=lncs\
            --latexcompiler=lualatex\
            --bibtextool=biblatex\
            --texlive=tl2019\
