--- a/.github/workflows/test-lncs-pdflatex.yml
+++ b/.github/workflows/test-lncs-pdflatex.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=lncs
+           --documentclass=lncs\
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
@@ -61,7 +61,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=lncs
+           --documentclass=lncs\
            --latexcompiler=pdflatex\
            --bibtextool=biblatex\
            --texlive=tl2019\
