--- a/.github/workflows/test-scientific-thesis-lualatex.yml
+++ b/.github/workflows/test-scientific-thesis-lualatex.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=scientific-thesis
+           --documentclass=scientific-thesis\
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
@@ -60,7 +60,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=scientific-thesis
+           --documentclass=scientific-thesis\
            --latexcompiler=lualatex\
            --bibtextool=biblatex\
            --texlive=tl2019\
