--- a/.github/workflows/test-scientific-thesis-pdflatex.yml
+++ b/.github/workflows/test-scientific-thesis-pdflatex.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=scientific-thesis
+           --documentclass=scientific-thesis\
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
@@ -59,7 +59,7 @@ jobs:
         run: |
           mkdir tmp && cd tmp
           npx yo $GITHUB_WORKSPACE\
-           --documentclass=scientific-thesis
+           --documentclass=scientific-thesis\
            --latexcompiler=pdflatex\
            --bibtextool=biblatex\
            --texlive=tl2019\
