Add listings choice

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -8,8 +8,9 @@ jobs:
         language: [en, de]
         # "arial" not available on linux
         font: [default, times]
+        listings: [listings, minted]
         cleveref: [true, false]
-        enquotes: [csquotes, textcmds, plainlatex]
+        enquotes: [csquotes, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -27,6 +28,7 @@ jobs:
            --bibtextool=bibtex\
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
@@ -47,8 +49,9 @@ jobs:
         language: [en, de]
         # "arial" not available on linux
         font: [default, times]
+        listings: [listings, minted]
         cleveref: [true, false]
-        enquotes: [csquotes, textcmds, plainlatex]
+        enquotes: [csquotes, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -66,6 +69,7 @@ jobs:
            --bibtextool=bibtex\
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
@@ -86,8 +90,9 @@ jobs:
         language: [en, de]
         # "arial" not available on linux
         font: [default, times]
+        listings: [listings, minted]
         cleveref: [true, false]
-        enquotes: [csquotes, textcmds, plainlatex]
+        enquotes: [csquotes, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -105,6 +110,7 @@ jobs:
            --bibtextool=bibtex\
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
@@ -125,8 +131,9 @@ jobs:
         language: [en, de]
         # "arial" not available on linux
         font: [default, times]
+        listings: [listings, minted]
         cleveref: [true, false]
-        enquotes: [csquotes, textcmds, plainlatex]
+        enquotes: [csquotes, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -144,6 +151,7 @@ jobs:
            --bibtextool=biblatex\
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
@@ -164,8 +172,9 @@ jobs:
         language: [en, de]
         # "arial" not available on linux
         font: [default, times]
+        listings: [listings, minted]
         cleveref: [true, false]
-        enquotes: [csquotes, textcmds, plainlatex]
+        enquotes: [csquotes, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -183,6 +192,7 @@ jobs:
            --bibtextool=bibtex\
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
@@ -203,8 +213,9 @@ jobs:
         language: [en, de]
         # "arial" not available on linux
         font: [default, times]
+        listings: [listings, minted]
         cleveref: [true, false]
-        enquotes: [csquotes, textcmds, plainlatex]
+        enquotes: [csquotes, plainlatex]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -222,6 +233,7 @@ jobs:
            --bibtextool=biblatex\
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
