Add tweak_outerquote (and minor fixes)

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -11,6 +11,8 @@ jobs:
         listings: [listings, minted]
         cleveref: [true, false]
         enquotes: [csquotes, plainlatex]
+        tweak_outerquote: [babel, outerquote]
+        todo: [pdfcomment, none]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -29,7 +31,9 @@ jobs:
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
-           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --cleveref=${{ matrix.cleveref }}\
+           --enquotes=${{ matrix.enquotes }}\
+           --tweak_outerquote=${{ matrix.tweak_outerquote }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
           pwd
@@ -52,6 +56,8 @@ jobs:
         listings: [listings, minted]
         cleveref: [true, false]
         enquotes: [csquotes, plainlatex]
+        tweak_outerquote: [babel, outerquote]
+        todo: [pdfcomment, none]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -70,7 +76,9 @@ jobs:
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
-           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --cleveref=${{ matrix.cleveref }}\
+           --enquotes=${{ matrix.enquotes }}\
+           --tweak_outerquote=${{ matrix.tweak_outerquote }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
           pwd
@@ -93,6 +101,8 @@ jobs:
         listings: [listings, minted]
         cleveref: [true, false]
         enquotes: [csquotes, plainlatex]
+        tweak_outerquote: [babel, outerquote]
+        todo: [pdfcomment, none]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -111,7 +121,9 @@ jobs:
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
-           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --cleveref=${{ matrix.cleveref }}\
+           --enquotes=${{ matrix.enquotes }}\
+           --tweak_outerquote=${{ matrix.tweak_outerquote }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
           pwd
@@ -134,6 +146,8 @@ jobs:
         listings: [listings, minted]
         cleveref: [true, false]
         enquotes: [csquotes, plainlatex]
+        tweak_outerquote: [babel, outerquote]
+        todo: [pdfcomment, none]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -152,7 +166,9 @@ jobs:
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
-           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --cleveref=${{ matrix.cleveref }}\
+           --enquotes=${{ matrix.enquotes }}\
+           --tweak_outerquote=${{ matrix.tweak_outerquote }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
           pwd
@@ -175,6 +191,8 @@ jobs:
         listings: [listings, minted]
         cleveref: [true, false]
         enquotes: [csquotes, plainlatex]
+        tweak_outerquote: [babel, outerquote]
+        todo: [pdfcomment, none]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -193,7 +211,9 @@ jobs:
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
-           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --cleveref=${{ matrix.cleveref }}\
+           --enquotes=${{ matrix.enquotes }}\
+           --tweak_outerquote=${{ matrix.tweak_outerquote }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
           pwd
@@ -216,6 +236,8 @@ jobs:
         listings: [listings, minted]
         cleveref: [true, false]
         enquotes: [csquotes, plainlatex]
+        tweak_outerquote: [babel, outerquote]
+        todo: [pdfcomment, none]
         examples: [true, false]
     steps:
       - name: Set up Git repository
@@ -234,7 +256,9 @@ jobs:
            --texlive=tl2019\
            --language==${{ matrix.language }} --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
-           --cleveref=${{ matrix.cleveref }} --enquotes=${{ matrix.enquotes }}\
+           --cleveref=${{ matrix.cleveref }}\
+           --enquotes=${{ matrix.enquotes }}\
+           --tweak_outerquote=${{ matrix.tweak_outerquote }}\
            --todo=${{ matrix.todo }}\
            --examples=${{ matrix.examples }}
           pwd
