--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-version: '10.x'
       - run: npm install
+      - run: 'echo "$LLNCS_CLS" > llncs.cls'
+        shell: bash
+        env:
+          LLNCS_CLS: ${{secrets.LLNCS_CLS}}
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
@@ -66,6 +70,10 @@ jobs:
         with:
           node-version: '10.x'
       - run: npm install
+      - run: 'echo "$LLNCS_CLS" > llncs.cls'
+        shell: bash
+        env:
+          LLNCS_CLS: ${{secrets.LLNCS_CLS}}
       - name: Generate template
         run: |
           mkdir tmp && cd tmp
