One parameter per line

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -33,7 +33,8 @@ jobs:
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
-           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --language==${{ matrix.language }}\
+           --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
@@ -82,7 +83,8 @@ jobs:
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
-           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --language==${{ matrix.language }}\
+           --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
@@ -127,7 +129,8 @@ jobs:
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
-           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --language==${{ matrix.language }}\
+           --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
@@ -172,7 +175,8 @@ jobs:
            --latexcompiler=pdflatex\
            --bibtextool=biblatex\
            --texlive=tl2019\
-           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --language==${{ matrix.language }}\
+           --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
@@ -217,7 +221,8 @@ jobs:
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
            --texlive=tl2019\
-           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --language==${{ matrix.language }}\
+           --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
@@ -262,7 +267,8 @@ jobs:
            --latexcompiler=lualatex\
            --bibtextool=biblatex\
            --texlive=tl2019\
-           --language==${{ matrix.language }} --font=${{ matrix.font }}\
+           --language==${{ matrix.language }}\
+           --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
